# PolyStokes

./: CMakeLists.txt  README.md  make_gsd.py  params.pkl  plot_central_angle.py  saddle.csv  test_sim.py
data/beta_0.1/: orientations.npy  trajectory.gsd  trajectory.npy
src/: Stokes.cpp  Stokes.h  arrays.cpp  arrays.h  bindings.cpp  check_dist.cpp  cleanup.cpp  init.cpp  mob.cpp  pair_interaction.cpp  pairwise_distances.out  pairwise_separations.out  params.h  rhs.cpp  run.cpp  translational_mobility.out  translational_resistance.out  vel.cpp  write_configuration.cpp
src/config/config/data/beta_0.1/: params.pkl
src/config/data/beta_0.1/: central_particle_azimuth.npy  central_particle_azimuth_T_0.25.npy  central_particle_azimuth_T_0.5.npy  central_particle_azimuth_T_1.0.npy  central_particle_azimuth_T_1.25.npy  central_particle_azimuth_T_1.5.npy  central_particle_azimuth_T_1.75.npy  central_particle_azimuth_times_T_0.25.npy  central_particle_azimuth_times_T_0.75.npy  central_particle_azimuth_times_T_1.0.npy  central_particle_azimuth_times_T_1.25.npy  central_particle_azimuth_times_T_1.75.npy  central_particle_azimuth_vs_time.npy  compare_azimuth_python_cpp.py  orientations.npy  trajectory.npy
src/data/beta_0.1/: params.pkl
